[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scene/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MeshRenderer.gd" type="Script" id=3]
[ext_resource path="res://Test/Default.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Art/Theme.tres" type="Theme" id=5]
[ext_resource path="res://Art/Roboto-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Art/studio020.hdr" type="Texture" id=7]
[ext_resource path="res://Art/Icons/nights_stay-24px.png" type="Texture" id=8]
[ext_resource path="res://Art/Icons/wb_sunny-24px.png" type="Texture" id=9]
[ext_resource path="res://Test/DefaultMaterial.material" type="Material" id=10]

[sub_resource type="SpatialMaterial" id=1]
resource_name = "DefaultMaterial"
params_cull_mode = 2
albedo_color = Color( 0.0117647, 0.854902, 0.776471, 1 )

[sub_resource type="PanoramaSky" id=2]
panorama = ExtResource( 7 )

[sub_resource type="Environment" id=3]
background_mode = 3
background_sky = SubResource( 2 )
background_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
ambient_light_color = Color( 0.5, 0.5, 0.5, 1 )
ambient_light_sky_contribution = 0.55
tonemap_mode = 2
tonemap_white = 6.0

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Spatial" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="CameraArm" type="Spatial" parent="Spatial"]

[node name="Camera" type="Camera" parent="Spatial/CameraArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
current = true

[node name="Objects" type="Spatial" parent="Spatial"]

[node name="Default" type="MeshInstance" parent="Spatial/Objects"]
mesh = ExtResource( 4 )
material/0 = ExtResource( 10 )
material/1 = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Spatial"]
environment = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="Spatial"]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 0 )
shadow_color = Color( 0.6, 0.6, 0.6, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Control/CenterContainer"]
margin_left = 660.0
margin_top = 315.0
margin_right = 1260.0
margin_bottom = 765.0
rect_min_size = Vector2( 600, 450 )
theme = ExtResource( 5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.obj ; Wavefront File", "*.dae ; DAE (Collada)", "*.fbx ; Filmbox", "*.gltf ; GL Transmission Format" )
current_dir = "/Godot Projects/3DPreview"
current_path = "/Godot Projects/3DPreview/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
margin_bottom = 67.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1904.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open" type="Button" parent="Control/MarginContainer/HBoxContainer"]
margin_right = 85.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "Open"

[node name="Settings" type="Button" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 89.0
margin_right = 195.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "Settings"

[node name="VSeparator" type="VSeparator" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 199.0
margin_right = 203.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="Settings2" type="Button" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 207.0
margin_right = 332.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "Reset View"

[node name="VSeparator2" type="VSeparator" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 340.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="CheckButton" type="CheckButton" parent="Control/MarginContainer/HBoxContainer"]
visible = false
margin_left = 234.0
margin_right = 333.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "SSAO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lit" type="Button" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 344.0
margin_right = 410.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "Lit"

[node name="Unlit" type="Button" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 494.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "Unlit"

[node name="Overdraw" type="Button" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 498.0
margin_right = 613.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "Overdraw"

[node name="Wireframe" type="Button" parent="Control/MarginContainer/HBoxContainer"]
visible = false
margin_left = 617.0
margin_right = 738.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "Wireframe"

[node name="VSeparator3" type="VSeparator" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 617.0
margin_right = 621.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="Light" type="Button" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 625.0
margin_right = 697.0
margin_bottom = 40.0
theme = ExtResource( 5 )
icon = ExtResource( 9 )

[node name="Dark" type="Button" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 701.0
margin_right = 773.0
margin_bottom = 40.0
theme = ExtResource( 5 )
icon = ExtResource( 8 )

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -59.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer2"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1904.0
margin_bottom = 43.0

[node name="Infos" type="Label" parent="Control/MarginContainer2/HBoxContainer"]
margin_right = 1784.0
margin_bottom = 27.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Easy Mesh Viewer"

[node name="Version" type="Label" parent="Control/MarginContainer2/HBoxContainer"]
margin_left = 1788.0
margin_right = 1888.0
margin_bottom = 27.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Version 0.1.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.513726 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -309.799
margin_top = -174.365
margin_right = -20.7988
margin_bottom = -52.3652
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Left Mouse - Rotate
Right Mouse - Pan
Mouse Wheel - Zoom"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="file_selected" from="Control/CenterContainer/FileDialog" to="Control" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Open" to="Control" method="_on_Open_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Settings2" to="Control" method="_on_Settings2_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Lit" to="Control" method="_on_Lit_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Unlit" to="Control" method="_on_Unlit_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Overdraw" to="Control" method="_on_Overdraw_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Wireframe" to="Control" method="_on_Wireframe_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Light" to="Control" method="_on_Light_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Dark" to="Control" method="_on_Dark_pressed"]
